--- a/src/common/components/Table/Table.css
+++ b/src/common/components/Table/Table.css
@@ -1,13 +1,29 @@
 .pagination-container
 {
     display:flex;
-    flex-direction: row;
-    justify-content:space-evenly;
-    align-items: center;
-    background-color: red;
+    justify-content: space-between;
+    background-color: pink;
+
 }
-.page-numbers
+.page
 {
-    margin:20px;
-    border:1px solid blue;
+    width: 24px;
+  height: 16px;
+  font-family: HKGrotesk;
+  font-size: 12px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.33;
+  letter-spacing: 0.12px;
+  color:#171f46;
+}
+.page-link
+{
+    border:1px solid black;
+    padding:2px;
+}
+.active-link
+{
+    border:1px solid red; 
 }
