--- a/src/UserModule/components/ObservationList/pagination.css
+++ b/src/UserModule/components/ObservationList/pagination.css
@@ -9,8 +9,8 @@
 {
     width: 24px;
     height: 24px;
-    /* margin:10px;
-    padding-left:5px; */
+    margin:10px;
+    padding-left:5px;
     align-self: center;
     border-radius: 2px;
     border:1px solid #d7dfe9;
@@ -29,15 +29,16 @@
 {   width: 24px;
     height: 24px;
     border-radius: 2px;
-    border: solid 1px #d7dfe9;
+    border:  1px solid #d7dfe9;
+    padding-left:6px;
+    margin-left:5px;
+   
     background-color:white;
 }
 .prev-button
 {
     width: 16px;
     height: 16px;
-    margin-left:5px;
-   
     object-fit: contain;
   }
   .break-me
